--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,8 @@
 Oversight 2D
 
+Alpha 0.1.0-a3 (04-20-2020)
+- Animation
+
 Alpha 0.1.0-a2 (04-20-2020)
 - Camera with Limits
 - More efficient map rendering
