--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 Oversight 2D
 
+Alpha 0.1.0-a5 (04-21-2020)
+- Entity Collision
+- Mouse Input
+- Simple User Interface Manager
+
 Alpha 0.1.0-a4 (04-20-2020)
 - Entity Manager
 
